// =============================================
// THRESHOLD - Database Diagram Format
// Copia este contenido en dbdiagram.io
// =============================================

// ========== MÓDULO DE AUTENTICACIÓN ==========

Table users {
  id int [pk, increment]
  email string [unique, not null]
  password_hash string [not null]
  name string
  lastname string
  username string [unique]
  grading_scale string
  approval_threshold real
  major string
  university string
  biometric_token string
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  last_login timestamp [default: `CURRENT_TIMESTAMP`]
  status varchar(20) [default: 'active']
  deletion_date timestamp
  
  indexes {
    email [unique]
    username [unique]
  }
}

Table deleted_users {
  id int [pk, increment]
  original_user_id int
  email string
  name string
  lastname string
  deleted_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table app_visitors {
  device_id string [pk]
  first_seen_at timestamp [default: `CURRENT_TIMESTAMP`]
  last_visit_at timestamp [default: `CURRENT_TIMESTAMP`]
  visit_count int [default: 1]
}

// ========== MÓDULO ACADÉMICO ==========

Table subjects {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  code string [default: '']
  name string [not null]
  credits int
  professor string
  color string [default: '#CCCCCC']
  icon string [default: 'book-outline']
  target_grade real
  folder_path string
  
  indexes {
    user_id
  }
}

Table assessments {
  id int [pk, increment]
  subject_id int [not null, ref: > subjects.id]
  name string [not null]
  type string
  date string
  weight string
  out_of int
  score int
  percentage real
  grade_value real
  is_completed int [default: 0]
  
  indexes {
    subject_id
  }
}

Table schedules {
  id int [pk, increment]
  subject_id int [not null, ref: > subjects.id]
  day_of_week int [not null]
  start_time string [not null]
  end_time string [not null]
  
  indexes {
    subject_id
  }
}

// ========== MÓDULO MULTIMEDIA: FOTOS ==========

Table photos {
  id int [pk, increment]
  subject_id int [not null, ref: > subjects.id]
  local_uri string [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  es_favorita int [default: 0]
  
  indexes {
    subject_id
  }
}

// ========== MÓDULO MULTIMEDIA: AUDIO ==========

Table audio_recordings {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  subject_id int [ref: > subjects.id]
  name string
  local_uri string [not null]
  duration int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    subject_id
  }
}

Table audio_transcripts {
  id int [pk, increment]
  recording_id int [not null, ref: > audio_recordings.id]
  transcript_uri string
  summary_uri string
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    recording_id
  }
}

// ========== MÓDULO MULTIMEDIA: YOUTUBE ==========

Table youtube_videos {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  subject_id int [ref: > subjects.id]
  youtube_url string [not null]
  video_id string [not null]
  title string
  thumbnail_url string
  duration int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    subject_id
  }
}

Table youtube_transcripts {
  id int [pk, increment]
  video_id int [not null, ref: > youtube_videos.id]
  transcript_uri string
  summary_uri string
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    video_id
  }
}

// ========== MÓDULO MULTIMEDIA: GALERÍA ==========

Table gallery_items {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  uri string [not null]
  subject string
  date string
  time string
  ocr_text string
  is_starred boolean [default: false]
  
  indexes {
    user_id
  }
}

// ========== MÓDULO DE ESTUDIO: FLASHCARDS ==========

Table flashcard_decks {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  subject_id int [ref: > subjects.id]
  title string [not null]
  description string
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    subject_id
  }
}

Table flashcards {
  id int [pk, increment]
  deck_id int [not null, ref: > flashcard_decks.id]
  front string [not null]
  back string [not null]
  status string [default: 'new']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    deck_id
  }
}

// ========== RELACIONES EXPLÍCITAS ==========

// Usuario a sus recursos
Ref: users.id < audio_recordings.user_id
Ref: users.id < youtube_videos.user_id
Ref: users.id < gallery_items.user_id
Ref: users.id < flashcard_decks.user_id

// Materia a sus evaluaciones
Ref: subjects.id < assessments.subject_id
Ref: subjects.id < photos.subject_id
Ref: subjects.id < schedules.subject_id

// Transcripciones 1:1
Ref: audio_recordings.id < audio_transcripts.recording_id
Ref: youtube_videos.id < youtube_transcripts.video_id

// Flashcards
Ref: flashcard_decks.id < flashcards.deck_id
